// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert (unit tests when using required props and defaults should match the snapshot 1`] = `
<kv-alert label="Main Message" show-icon="" size="large" type="info">
  <template shadowrootmode="open">
    <div class="alert-container">
      <div class="alert alert--type-info" part="container">
        <div class="information">
          <kv-icon class="icon" name="kv-error"></kv-icon>
          <div class="text-container">
            <div class="title">
              Main Message
            </div>
            <slot name="description"></slot>
          </div>
        </div>
        <slot name="actions"></slot>
      </div>
    </div>
  </template>
</kv-alert>
`;

exports[`Alert (unit tests when using required props and description should match the snapshot 1`] = `
<kv-alert description="Secondary Message" label="Main Message" show-icon="" size="large" type="info">
  <template shadowrootmode="open">
    <div class="alert-container">
      <div class="alert alert--type-info" part="container">
        <div class="information">
          <kv-icon class="icon" name="kv-error"></kv-icon>
          <div class="text-container">
            <div class="title">
              Main Message
            </div>
            <slot name="description">
              <div class="description">
                Secondary Message
              </div>
            </slot>
          </div>
        </div>
        <slot name="actions"></slot>
      </div>
    </div>
  </template>
</kv-alert>
`;

exports[`Alert (unit tests when using required props and showIcon \`false\` should match the snapshot 1`] = `
<kv-alert label="Main Message" show-icon="false" size="large" type="info">
  <template shadowrootmode="open">
    <div class="alert-container">
      <div class="alert alert--type-info" part="container">
        <div class="information">
          <div class="text-container">
            <div class="title">
              Main Message
            </div>
            <slot name="description"></slot>
          </div>
        </div>
        <slot name="actions"></slot>
      </div>
    </div>
  </template>
</kv-alert>
`;
